# itol-helper

./: .gitignore  Makefile  README.ja.md  README.md  pyproject.toml
itolhelper/: io.py  main.py  phylo.py  phylo_test.py  pretty_logger.py
itolhelper/datasets/: __init__.py  alignment.py  branch_color.py  branch_color_test.py  branch_symbols.py  config.py  config_test.py  style.py  text.py
itolhelper/handlers/: __init__.py  alignment.py  branch_symbol.py  meme.py  style.py  text.py  upload.py
