[tool.poetry]
name = "itolhelper"
version = "0.1.0"
description = ""
authors = ["illumination-k <illumination.k.27@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.27.1"
pydantic = "^1.9.1"
biopython = "^1.79"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
types-requests = "^2.27.27"
pytest = "^7.1.2"

[tool.poetry.scripts]
ih = "itolhelper.main:main"

[tool.mypy]
namespace_packages = true

[tool.black]
line-length = 100
exclude = '''
/(
  # These would already be ignored by pants, but having them here allows for manually running Black if one so wishes.
  | \.git
  | \.mypy_cache
  | dist
  | \.pants\.d
  | virtualenvs
  # This file intentionally contains invalid syntax
  # It trips black up.
  | compilation_failure
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
